--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
     id "java-library"
-    id "com.github.johnrengelman.shadow" version "8.1.0"
+    id "com.gradleup.shadow" version "8.3.5"
     id "maven-publish"
 }
 
-group = 'dev.rosewood'
-version = '1.0-SNAPSHOT'
+group = 'dev.oribuin'
+version = '1.0'
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
@@ -36,17 +36,16 @@ dependencies {
 
     // Decide whether you want to use Spigot or Paper API (Paper is recommended)
     compileOnly "io.papermc.paper:paper-api:${spigotVersion}-R0.1-SNAPSHOT"
-//    compileOnly "org.spigotmc:spigot-api:${spigotVersion}-R0.1-SNAPSHOT"
 }
 
 shadowJar {
     archiveClassifier.set(null)
 
-    relocate("dev.rosewood.rosegarden", "${project.group}.myplugin.rosegarden")
+    relocate("dev.rosewood.rosegarden", "${project.group}.chatfaq.rosegarden")
 
     // If you're not using SQL, you can exclude the following packages
-//    exclude 'dev/rosewood/rosegarden/lib/hikaricp/**/*.class'
-//    exclude 'dev/rosewood/rosegarden/lib/slf4j/**/*.class'
+    exclude 'dev/rosewood/rosegarden/lib/hikaricp/**/*.class'
+    exclude 'dev/rosewood/rosegarden/lib/slf4j/**/*.class'
 }
 
 // Include version replacement
@@ -63,9 +62,9 @@ publishing {
     publications {
         shadow(MavenPublication) { publication ->
             project.shadow.component(publication)
-            artifactId = "myplugin"
+            artifactId = "chatfaq"
             pom {
-                name = "myplugin"
+                name = "chatfaq"
             }
         }
     }
